# hirop_pickandplace

./: README.md
3rd/include/: hlibload.h
3rd/libs/: libHPlugin.so.1.0.0  libhsr_generator.so.1.0  libhsr_generator.so.1.0.0
hirop_PickPlace/: CMakeLists.txt  config.yaml  config.yaml~  hirop_pickandplace.pro
hirop_PickPlace/include/: c_base_generator.h  c_base_pickPlace.h  configuer.h  cpp_loader.h  entity_factory.h  igenerator.h  igrab_operation.h  ipickPlace.h  pickPlace_execute.h  pickandplac.h
hirop_PickPlace/src/: c_base_generator.cpp  c_base_pickPlace.cpp  configuer.cpp  cpp_loader.cpp  pickPlace_execute.cpp
hirop_PickPlace/src/utils/: py_lock_helper.cpp
hsr_generator/: hsr_generator.pro
hsr_generator/include/: generator.h
hsr_generator/src/: generator.cpp  main.cpp
hsr_grab_operation/: CMakeLists.txt
hsr_grab_operation/include/: hsr_grab_operation.h
hsr_grab_operation/src/: hsr_grab_operation.cpp
hsr_pickplace/: CMakeLists.txt  CMakeLists.txt~  package.xml
hsr_pickplace/include/: ipickPlace.h~  pickPlace.h  pickPlace.h~
hsr_pickplace/src/: pickPlace.cpp
pick_place_bridge/: CMakeLists.txt  CMakeLists.txt~  package.xml
pick_place_bridge/include/: ros_pick_place.h
pick_place_bridge/src/: main.cpp  ros_pick_place.cpp
pick_place_bridge/srv/: ros_pick_place.srv  set_pick.srv  set_place.srv
